
Please send GNU C library bug reports via <https://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.31.1

The following bugs are resolved with this release:
  [19519] iconv(1) with -c option hangs on illegal multi-byte sequences
    (CVE-2016-10228)
  [20543] Please move from .gnu.linkonce to comdat
  [23296] Data race in setting function descriptor during lazy binding
  [25487] sinl() stack corruption from crafted input (CVE-2020-10029)
  [25523] MIPS/Linux inline syscall template is miscompiled
  [25623] test-sysvmsg, test-sysvsem, test-sysvshm fail with 2.31 on 32 bit and
    old kernel
  [25635] arm: Wrong sysdep order selection for soft-fp
  [25639] localedata: Some names of days and months wrongly spelt in
    Occitan
  [25715] system() returns wrong errors when posix_spawn fails
  [25810] x32: Incorrect syscall entries with pointer, off_t and size_t
  [25896] Incorrect prctl
  [25902] Bad LOADARGS_N
  [25933] Off by one error in __strncmp_avx2
  [25966] Incorrect access of __x86_shared_non_temporal_threshold for x32
  [25976] nss_compat: internal_end*ent may clobber errno, hiding ERANGE
  [26224] iconv hangs when converting some invalid inputs from several IBM
    character sets (CVE-2020-27618)
  [26248] Incorrect argument types for INLINE_SETXID_SYSCALL
  [26332] Incorrect cache line size load causes memory corruption in memset
  [26383] bind_textdomain_codeset doesn't accept //TRANSLIT anymore
  [26923] Assertion failure in iconv when converting invalid UCS4 (CVE-2020-29562)
  [26932] libc: sh: Multiple floating point functions defined as stubs only

Security related changes:

  CVE-2016-10228: An infinite loop has been fixed in the iconv program when
  invoked with the -c option and when processing invalid multi-byte input
  sequences.  Reported by Jan Engelhardt.

  CVE-2020-10029: Trigonometric functions on x86 targets suffered from stack
  corruption when they were passed a pseudo-zero argument.  Reported by Guido